# LangChain-DeepDive

./: .env.example  pyproject.toml
11_Tools/: 3_structured_tools.py  4_base_tools.py  5_custom_toolkit.py  8_single_tool_execution.py  8_tool_execution.py
12_Tools/: 1_community_built_in_tools.py  2_custom_tools.py  6_tool_model_binding.py  7_tool_calling.py  9_tool_execution.py
13_LangChain_Agents/: 1_react_agent.py  2_react_agent.py
16_LangGraph_Agents/: 1_single_node_agent.py  2_chatbot_agent_binary_router.py
1_Models/1_Text2Text/: 1_direct_model_invoke.py  1_native_invoke.py  2_langchain_invoke.py  2_langchain_static_wrapper.py  3_langchain_generic_wrapper.py
2_Input/1_Messages/: 1_basic_conversation.py  (+1 more)
4_Chains/: 1_simple_chain.py  1_simple_chain_prompt_template.py  2_sequential_chain.py  2_simple_chain_chat_prompt_from_messages.py  3_simple_chain.py  3_simple_chain_runnable_lambda.py  4_chains_under_the_hood.py  5_chains_under_the_hood_extended.py  5_sequential_chain_runnable_lambda.py  6_chain_parallel.py  6_parallel_chain.py  7_chain_parallel.py  7_parallel_chain_runnable_lambda.py  8_chain_conditional.py  8_conditional_chain.py  9_chain_conditional.py
5_Embeddings/: 1_simple_embedding_query.py  2_simple_embedding_documents.py  3_calculate_similarity.py  3_calculate_similarity_score.py
6_DocumentLoaders/: 1_csv_loader.py  2_pdf_loader.py  3_directory_loader.py  4_text_loader.py  5_webbase_loader.py
7_TextSplitters/: 2_length_based.py  5_semantic_meaning_based.py
8_VectorStores/: langchain_chroma.py
9_Retrievers/: langchain_retrievers.py
(+18 files in other folders)
