[project]
name = "langchain-deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "chromadb>=1.0.9",
    "duckduckgo-search>=8.0.1",
    "faiss-cpu>=1.11.0",
    "google-genai>=1.12.1",
    "grandalf>=0.8",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.3",
    "langfuse>=2.60.3",
    "langgraph>=0.4.5",
    "opik>=1.7.18",
    "pip-system-certs>=4.0",
    "pydantic>=2.11.3",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "tavily-python>=0.7.2",
    "tiktoken>=0.9.0",
    "wikipedia>=1.4.0",
]
